--- a/tsunami_app/bower.json
+++ b/tsunami_app/bower.json
@@ -4,5 +4,8 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.0",
     "platform.js": "platform#~1.3.0"
+  },
+  "resolutions": {
+    "angular": "1.4.3"
   }
 }
